telerun-out/0215286/compile-log.txt
/tmp/tmptk9cq7j6/source.cu(356): error: identifier "attention_forward" is undefined
      attention_forward(d_Q, d_K, d_V, d_out, bs, nh, seqlen, seqlen, hdim);
      ^

/tmp/tmptk9cq7j6/source.cu(464): error: identifier "attention_forward" is undefined
      attention_forward(d_Q, d_K, d_V, d_out, bs, nh, seqlen_q, seqlen_kv, hdim);
      ^

2 errors detected in the compilation of "/tmp/tmptk9cq7j6/source.cu".
